# boagent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  build.sh  data_witout_header.csv  docker-compose.yaml  hardware_cli.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build_client.yml  greenhack22.yml  release.yml  test.yml
SERVER_AGENT/: generate.sh  openapi.json
SERVER_AGENT/AGENT/agent/: disk.py  ram.py
SERVER_AGENT/AWS/: Pipfile  README.md  print-instance-usage.py
SERVER_AGENT/AWS/aws_code/: main.py  test_main.py
SERVER_AGENT/AWS/bills/: main.py  sample.csv
SERVER_AGENT/AWS/sample_code/: print-instance-usage.py
SERVER_AGENT/agent/: cpu.py  eda.py  main.py  ram.py  requirements.txt  requirements.yml
SERVER_AGENT/cpu/: main.py
SERVER_AGENT/python-client/: README.md  setup.py
agent/: main.py
api/: api.py  eda.py  hardware_data.json  requirements.txt
boagent/: __init__.py  requirements.txt  serve.py
boagent/api/: Query.yaml  __init__.py  _db.py  api.py  cli.py  config.py  database.py  db.py  exceptions.py  fill_database.py  hardware_data.json  hypervisor.py  models.py  process.py  test_api.py  test_api_integration.py  test_api_unit.py  utils.py
boagent/hardware/: __init__.py  cpu.py  hardware.py  hardware_cli.py  lshw.py  test_hardwarecli.py  win32.py
boagent/impact/: build.sh  generate.sh  impact.py
boagent/public/: index.html
boagent/tests/: test_api.py  test_hardware.py  test_lshw.py
compose/: development.yaml
db/: boagent.db
debian/: changelog  control  copyright  install  rules
hardware/: hardware.py  requirements.txt
hardware/cpu/: __init__.py  cpu.py
hardware/disk/: README.md  __init__.py  disk.py
hardware/ram/: __init__.py
impact/: generate.sh  impact.py  openapi.json
impact/python-client/: README.md
setup/: boagent  docker-compose.yaml
tests/api/: test_api_hypervisor.py  test_api_integration.py  test_api_process.py  test_api_unit.py
tests/hardware/: test_hardwarecli.py  test_lshw.py  test_win32.py
tests/mocks/: boaviztapi_response_not_verbose.json  formatted_power_data_one_hour.json  formatted_scaphandre.json  get_metrics_not_verbose.json  get_metrics_verbose.json  get_metrics_verbose_no_hdd.json  hardware_data.json  hubblo-ci-01_lshw.json  lshw_data.json  lshw_data_sudo.json  mocks.py  nvme_data.json  nvme_data_sudo.json  power_data.json  sudo_lshw_data.json  sudo_lshw_data_disks.json  sync-ce-re_lshw.json
(+172 files in other folders)
