[tool.poetry]
name = "boagent"
version = "0.9.0"
description = "Local API to collect and compute data on used device and running applications to give insight on their environmental impacts."
authors = []
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boaviztapi-sdk = "^1.2.4"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
click = "^8.1.7"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
deptry = "^0.20.0"
httpx = "^0.27.2"
requests = "^2.32.3"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
