[project]
name = "boagent"
version = "0.1.1"
description = "Local API to collect and compute data on used device and running applications to give insight on their environmental impacts."
authors = [{name = "Boavizta", email = "open-source@boavizta.org"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
"boaviztapi-sdk>=1.2.4",
"fastapi>=0.110.0",
"pydantic>=2.6.4",
"pydantic-settings>=2.2.1",
"click>=8.1.7",
"python-dateutil>=2.9.0.post0",
"uvicorn>=0.30.6"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pre-commit = "^3.6.2"
deptry = "^0.20.0"
httpx = "^0.27.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/boavizta/boagent"
Issues = "https://github.com/boavizta/boagent/issues"
